--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus objetivos do ano</title>
+    <title>Quantos dias faltam?</title>
 </head>
 <body>
-    <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano_</h2>
-          <div class="botoes">
-             <button class="botao">Cursos Alura</button>
-             <button class="botao">Estudos</button>
-             <button class="botao">Criar um portfolio</button>
-             <button class="botao">Atualizar meu currículo</button>
-          </div>
-    </section>
-
+   <h1>Quantos dias faltam<span>?</span></h1>
+<p id="dias_restantes"></p>
+<script scr="main.js"></script>
 </body>
 </html>
