--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantos dias faltam?</title>
+    <title>Meus objetivos do ano</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Quantos dias faltam<span>?</span></h1>
-<p id="dias_restantes"></p>
-<script scr="main.js"></script>
+    <section class="conteudo-principal">
+      <h2 class="titulo-principal">Meus objetivo do ano<span>_</span></h2>
+      <div class="botoes">
+        <button class="botao">Cursos na Alura</button>
+        <button class="botao">Criar projetos em Javascript</button>
+        <button class="botao">Criar um portifolio</button>
+        <button class="botao">Atualizar meu currículo</button>
+      </div>
+    </section>
 </body>
 </html>
